fix group block inner-containment alignment

--- a/assets/css/blocks/group.scss
+++ b/assets/css/blocks/group.scss
@@ -13,3 +13,8 @@
 		margin-bottom: 0;
 	}
 }
+
+.wp-block-group__inner-container {
+	display: flex;
+	justify-content: center;
+}
